importing new consolidated cards structure
